[package]
name = "snapchain-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
libp2p = { version = "0.55", features = ["tokio", "gossipsub", "noise", "tcp", "yamux", "quic"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
prost = "0.13"
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ttl_cache = "0.5"

[build-dependencies]
prost-build = "0.13"
